# island

./: Cargo.toml  README.md  build.rs
assets/landlock/: executable-base.toml  island-default-base.toml
assets/shell/: hook.fish  hook.zsh
src/: config.rs  context.rs  elf.rs  elf_utils.rs  lock.rs  main.rs  tests_profile.rs  workspace.rs
tests/: integration.rs  shell.rs  tap.fish  tap.sh
tests/commands/: test_create.sh  test_run.sh  test_update.sh  test_version.sh
tests/home/mini-landlock-config/config/island/profiles/foo/: profile.toml
tests/home/mini-landlock-config/config/island/profiles/foo/landlock/: base.toml
tests/home/no-landlock-config/config/island/profiles/foo/: profile.toml  workspace-cache  workspace-config  workspace-data  workspace-run  workspace-state  workspace-tmp
tests/shell/: test_hook.fish  test_hook.zsh
tests/shell/test_stub/: island
